--- a/Exercises/02_07_begin.ipynb
+++ b/Exercises/02_07_begin.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4481684f-f411-43fa-9bf7-12b7e79724a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world!\n",
+      "Goodbye world!\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Hello world!\")\n",
     "\n",
