--- a/Exercises/02_07_end.ipynb
+++ b/Exercises/02_07_end.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e62dc887-fca9-446f-8e48-7da4d4adfdc4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world!\n",
+      "Goodbye world!\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Hello world!\")\n",
     "\n",
