--- a/Exercises/02_09.ipynb
+++ b/Exercises/02_09.ipynb
@@ -2,16 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "056d7c78-1890-4f32-87f0-d56b85dcd558",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world\n",
+      "Hello name\n"
+     ]
+    }
+   ],
    "source": [
     "# syntax error\n",
     "print(\"Hello world\")\n",
     "\n",
     "# runtime error\n",
-    "10 * (2/0)\n",
+    "10 * (2/10)\n",
     "\n",
     "# semantic error\n",
     "name = \"Alice\"\n",
