--- a/Exercises/03_05_begin.ipynb
+++ b/Exercises/03_05_begin.ipynb
@@ -10,34 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi!\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "What's your name?  Franco\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "It's nice to meet you, Franco\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Are you enjoying the course?  yes\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Hi!\n",
+      "It's nice to meet you, Franco\n",
       "Oh no! That makes me sad!\n"
      ]
     }
