--- a/Exercises/03_05_end.ipynb
+++ b/Exercises/03_05_end.ipynb
@@ -2,10 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b9f3cefd-a185-4e65-a88d-cf261f7f2773",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi!\n",
+      "It's nice to meet you, Franco\n",
+      "That's good to hear!\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Hi!\")\n",
     "name = input(\"What's your name? \")\n",
