--- a/Exercises/03_06_begin.ipynb
+++ b/Exercises/03_06_begin.ipynb
@@ -2,10 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ebf8d8da-d707-4531-9924-d67af1ff375e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi!\n",
+      "It's nice to meet you, Franco\n",
+      "That's good to hear!\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "print(\"Hi!\")\n",
