--- a/Exercises/03_08_solution.ipynb
+++ b/Exercises/03_08_solution.ipynb
@@ -2,16 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "17655a28-38cc-4f12-bb40-8a7ab54f569c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Challenge complete!\n"
+     ]
+    }
+   ],
    "source": [
-    "Challenge 1:\n",
-    "This is going to be tricky ;)\n",
-    "2**3 = 8\n",
-    "Challenge complete!"
+    "#Challenge 1:\n",
+    "#This is going to be tricky ;)\n",
+    "2**3 == 8\n",
+    "print(\"Challenge complete!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee8038d8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
