--- a/Exercises/04_03_end.ipynb
+++ b/Exercises/04_03_end.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4556c0a7-a216-4850-9104-9cb66135687e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Irises love water\n",
+      "Thanks!\n"
+     ]
+    }
+   ],
    "source": [
     "plant = \"Irises\"\n",
     "\n",
