--- a/Exercises/04_02.ipynb
+++ b/Exercises/04_02.ipynb
@@ -10,34 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi!\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "What's your name?  Franco\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "It's nice to meet you, Franco\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Are you enjoying the course?  Yes\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Hi!\n",
+      "It's nice to meet you, Franco\n",
       "That's good to hear!\n",
       "Final statement\n"
      ]
